# rex-rs

./: .dockerignore  .funcignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  Rocket.toml  azure-pipelines.yml  host.json  oas3.yaml  proxies.json
.deploy/: deployment.yml
.github/: dependabot.yml
.github/workflows/: deploy-aks.yml  deploy-azfn.yml  docker-publish.yml  docker-release.yml  main.yml  readme-api.yml  release.yml  rust.yml
api/: api.swagger.yaml  api_v1.yml  api_v2.yml  api_v3.yml  function.json  oas3.yaml
src/: macros.rs  main.rs  stator.rs
src/api/: auth.rs  error.rs  macros.rs  mod.rs  utils.rs
src/api/collections/: get_collection.rs  get_collections.rs  mod.rs  models.rs  new_collection.rs  remove_collection.rs  store_collection.rs
src/api/health/: get_health.rs  mod.rs  models.rs  test.rs
src/api/ideas/: get_idea.rs  get_ideas.rs  get_random_idea.rs  mod.rs  models.rs  new_idea.rs  remove_idea.rs  store_idea.rs
src/api/role_assignments/: get_role_assignment.rs  get_role_assignments.rs  mod.rs  models.rs  remove_role_assignment.rs  store_role_assignment.rs
src/api/test/: mod.rs
src/api/users/: get_user.rs  mod.rs
src/errors/: mod.rs
src/health/: mod.rs  models.rs  state.rs  test.rs
src/ideas/: mod.rs  models.rs  state.rs  test.rs
src/models/: collection.rs  health.rs  idea.rs  macros.rs  mod.rs  role_assignment.rs  stateview.rs  user.rs
src/store/: memory.rs  mod.rs  tablestorage.rs
src/telemetry/: actix_message.rs  actix_web_tracing.rs  mod.rs  session.rs
src/ui/: mod.rs
