[package]
name = "rex"
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2018"

[features]
default = []
table_storage = []

[dependencies]
actix = "0.13"
actix-http = "3.6"
actix-rt = "2.8"
actix-service = "2.0.2"
actix-web = "4.5"
async-trait = "0.1.77"
azure_core = "0.17"
azure_data_tables = "0.17"
azure_storage = "0.17"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
http = "0.2"
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
openidconnect = { version = "3.4", default_features = false, features = ["curl"] }
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", features = ["tls-roots"] }
percent-encoding = "2.3"
rand = "0.8"
reqwest = { version = "0.11" }
sentry = { version = "0.32", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tonic = { version = "0.9.2", features = ["tls-roots"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-attributes = { git="https://github.com/SierraSoftworks/tracing.git" }
tracing-futures = { version = "0.2.5", features = ["futures-03"] }
tracing-opentelemetry = "0.21"
tracing-subscriber = { version = "0.3.17", features = ["tracing-log"] }
uuid = { version = "1.7", features = ["serde", "v4"] }