[package]
name = "rex"
version = "0.1.0"
authors = ["Benjamin Pannell <benjamin@pannell.dev>"]
edition = "2021"

[features]
default = []
table_storage = []
ci_build = ["table_storage", "openssl-sys/vendored"]

[dependencies]
actix = "0.13"
actix-http = "3.8"
actix-rt = "2.10"
actix-service = "2.0.2"
actix-web = "4.8"
async-trait = "0.1.81"
azure_core = "0.30"
azure_data_tables = "0.21"
azure_storage = "0.21"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.11"
futures = "0.3"
http = "0.2"
lazy_static = "1.5"
log = "0.4"
md5 = "0.8"
openidconnect = { version = "3.5", default-features = false, features = ["curl"] }
percent-encoding = "2.3"
rand = "0.9"
reqwest = { version = "0.12" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["full"] }
tonic = { version = "0.11", features = ["tls-roots"] }
tracing = { version = "0.1.44" }
tracing-batteries = { git = "https://github.com/sierrasoftworks/tracing-batteries-rs.git", features = ["medama"] }
uuid = { version = "1.19", features = ["serde", "v4"] }
openssl-sys = { version = "0.9.109", features = ["vendored"], optional = true }
